Added jshint to test process.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Elegant JS class system",
   "main": "index.js",
   "scripts": {
-    "test": "istanbul cover node_modules/.bin/_mocha --report html --",
-    "test-travis": "istanbul cover node_modules/.bin/_mocha --report lcovonly --"
+    "test": "jshint . && istanbul cover node_modules/.bin/_mocha --report html --",
+    "test-travis": "jshint . && istanbul cover node_modules/.bin/_mocha --report lcovonly --"
   },
   "files": [
     "index.js",
